--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "^15.1.6",
     "openai": "^4.82.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.2",
